# scrolllockd

./: .clang-format  .gitignore  Justfile  Makefile  build.zig  flake.nix  meson.build  meson_options.txt
include/: cache.h  device.h
misc/: scrolllockd.service
src/: cache.c  device.c  devices.zig  main.c  main.zig  state.zig
systemd/: scrolllockd.service
